--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dist"
   ],
   "scripts": {
-    "prebuild": "rm -rf dist",
+    "prebuild": "",
     "build": "rollup -c",
     "pretest": "npm run build",
     "test": "nyc ava",
